# Beehive

./: README.md
Beehive-cpp/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  config  config.copy_selected  data_hist.config  dataframe.config  graph.config  hopscotch_group.config  kmeans.config  kv.config  llama.config  mg.config  social_network.config  traverse_array.config
Beehive-cpp/benchmark/: CMakeLists.txt  bplus_tree_iteration.cpp  concurrent_hashmap_bench.cpp  concurrent_kv_service.cpp  evaluation.md  hashtable_find_profile.cpp  hashtable_multi_find.cpp  hopscotch_group_zipfian.cpp  hopscotch_latency.cpp  hopscotch_multi_find.cpp  kmeans.cpp  pointer_chasing.cpp  vector_sort.cpp
Beehive-cpp/benchmark/DataFrame/: .gitignore  CMakeLists.txt
Beehive-cpp/benchmark/DataFrame/app/: main.cc  motivation.cc
Beehive-cpp/benchmark/DataFrame/include/CSV/: csv.hpp
Beehive-cpp/benchmark/DataFrame/include/DataFrame/: DataFrame.h  DataFrameStatsVisitors.h  (+1 more)
Beehive-cpp/benchmark/DataFrame/test/: vectors_tester.cc
Beehive-cpp/benchmark/df-flight/: CMakeLists.txt  flight.cpp  read_csv.hpp
Beehive-cpp/benchmark/graph/: CMakeLists.txt  bc.cpp  bfs.cpp  bfscc.cpp  cc.cpp  graph.cpp  graph.hpp  page_rank.cpp
Beehive-cpp/benchmark/kvs/: CMakeLists.txt  latency.cpp  throughput.cpp
Beehive-cpp/benchmark/llama/: .gitignore  CMakeLists.txt  llama_user_chat.txt  run.c  run_chat_far.cpp  run_chat_far_prof.cpp  run_no_remote.sh
Beehive-cpp/benchmark/mg/: CMakeLists.txt  mg.cpp  npbparams.hpp
Beehive-cpp/benchmark/mg/common/: c_randdp.cpp  npb-CPP.hpp
Beehive-cpp/benchmark/mg/config/: Anpbparams.hpp  Bnpbparams.hpp  Cnpbparams.hpp  Dnpbparams.hpp  Snpbparams.hpp
Beehive-cpp/benchmark/microbenchmarks/: CMakeLists.txt  bw.cpp  context_switch_overhead.cpp  copy_selected.cpp  pointer_chasing.cpp  rdma_bw.cpp  traverse_array.cpp  yield_overhead.cpp
Beehive-cpp/benchmark/preempt_eval/: CMakeLists.txt  encrypt.hpp  preempt_eval.cpp
Beehive-cpp/benchmark/socialNetwork/: BackEndService.cpp  BackEndService.hpp  CMakeLists.txt  ConcurrentHashMap.hpp  ConcurrentSet.hpp  ConcurrentTree.hpp  OrderedVector.hpp  Readme.md  SimpleBackEndServer.cpp  SimpleBackEndServer.hpp  client.hpp  config.hpp  defs.hpp  latency_main.cpp  main.cpp  request.hpp  states.cpp  states.hpp  utils.cpp  utils.hpp
Beehive-cpp/benchmark/socialNetwork/old_data/: sn-16-15g-throughput.txt  sn-16-23g-throughput.txt  sn-16-4g-throughput.txt  sn-16-64g-throughput.txt  sn-16-72g-throughput.txt  sn-16-8g-throughput.txt
Beehive-cpp/include/: inline_task_option.hpp  option.hpp
Beehive-cpp/include/async/: async.hpp  context.hpp  generic_stream.hpp  inline_task.hpp  loop.hpp  scoped_inline_task.hpp  select_schedule.hpp  stack_allocator.hpp  stream_runner.hpp  task.hpp
Beehive-cpp/include/cache/: accessor.hpp  cache.hpp  concurrent_array_cache.hpp  concurrent_cache.hpp  entry.hpp  handler.hpp  local_allocator.hpp  local_array_cache.hpp  local_cache.hpp  no_remote.hpp  object.hpp  region_based_allocator.hpp  region_remote_allocator.hpp  remote_allocator.hpp  scope.hpp  selection.hpp  task.hpp
Beehive-cpp/include/data_structure/: ConcurrentFlatHashmap.hpp  bplus_tree_map.hpp  btree_string_multimap.hpp  chunked_graph.hpp  concurrent_hashmap.hpp  dyn_sized_object.hpp  far_vector.hpp  far_vector_algorithm.ipp  far_vector_iter.ipp  far_vector_lite_iter.ipp  far_vector_pointer.ipp  far_vector_view.ipp  hashtable.hpp  hopscotch.hpp  local_concurrent_hashmap.hpp  ordered_vector.hpp  small_vector.hpp  vector.hpp  view.hpp
Beehive-cpp/include/rdma/: client.hpp  config.def  config.hpp  exchange_msg.hpp  rdma.hpp  server.hpp  server.hpp.orig
Beehive-cpp/include/test/: fixed_size_string.hpp
Beehive-cpp/include/utils/: cache_access_state.def  control.hpp  cpu_cycles.hpp  debug.hpp  defer.hpp  fork_join.hpp  linked_list.hpp  parallel.hpp  perf.hpp  profile.hpp  profile_item.def  signal.hpp  spinlock.hpp  stats.hpp  threads.hpp  timer.hpp  uthreads.hpp  zipfian.hpp
Beehive-cpp/scripts/: bc.sh  bfs.sh  cc.sh  cgroup.sh  cpu_freq.sh  dataframe_run.sh  dataframe_run_core.sh  dataframe_run_scale.sh  kv_tput.sh  llama_run.sh  llama_run_core.sh  mg_run.sh  mg_run_core.sh  mg_run_scale.sh  password.sh  pr.sh  run.sh  run_df.sh  run_kmeans.sh  social_network_run.sh  social_network_run_core.sh  social_network_run_latency.sh  social_network_run_scale.sh  turbo_boost.sh
Beehive-cpp/src/async/: async.cpp  xstack.s
Beehive-cpp/src/cache/: cache.cpp
Beehive-cpp/src/rdma/: client.cpp  exchange_msg.cpp  server.cpp
Beehive-cpp/src/utils/: control.cpp  signal.cpp  stats.cpp  uthreads.cpp
Beehive-cpp/test/: CMakeLists.txt  foo.cpp  test_async.cpp  test_bplus_tree_map.cpp  test_btree_string_multimap.cpp  test_concurrent_allocate.cpp  test_concurrent_cache.cpp  test_concurrent_flat_map.cpp  test_concurrent_rdma.cpp  test_deref_scope.cpp  test_far_vector.cpp  test_fence.cpp  test_generic_stream.cpp  test_hashtable.cpp  test_hopscotch.cpp  test_local_cache.cpp  test_ordered_vec.cpp  test_rdma.cpp  test_region_remote_allocator.cpp  test_small_vec.cpp  test_sync.cpp  test_sync_simple.cpp  test_vector.cpp  test_view.cpp
Beehive-rust/Cfibre/: CMakeLists.txt  cfibre.cpp  cfibre.h  test.cpp
Beehive-rust/beehive/: Cargo.toml  build.rs
Beehive-rust/beehive/src/: lib.rs  mem.rs  net.rs  pararoutine.rs  profile.rs  rem_data_struct.rs  thread.rs  utils.rs
Beehive-rust/beehive/src/data_struct/: concurrent_map.rs
Beehive-rust/beehive/src/mem/: allocator_utils.rs  entry.rs  evacuator.rs  local_allocator.rs  manager.rs  object.rs  pointer.rs  remote_allocator.rs  scope.rs
Beehive-rust/beehive/src/net/: client.rs  config.rs  ibverbs.rs  memory.rs  rdma.rs  server.rs
Beehive-rust/beehive/src/pararoutine/: task_allocator.rs
Beehive-rust/beehive/src/profile/: hardware_profiler.rs  papi.rs  software_profiler.rs
Beehive-rust/beehive/src/rem_data_struct/: rem_concurrent_map.rs  rem_iter.rs  rem_vec.rs
Beehive-rust/beehive/src/thread/: meta.rs
Beehive-rust/beehive/src/utils/: bitfield.rs  pointer.rs  spinlock.rs
(+75 files in other folders)
