add_executable(kmeans kmeans.cpp)
target_link_libraries(kmeans ${COMMON_LIBS} papi)

add_subdirectory(microbenchmarks)
add_subdirectory(kvs)
add_subdirectory(graph)
add_subdirectory(df-flight)
add_subdirectory(preempt_eval)
add_subdirectory(DataFrame)
add_subdirectory(llama)
# add_subdirectory(mapreduce)
add_subdirectory(mg)
add_subdirectory(socialNetwork)
