[package]
name = "beehive"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29", features = ["mman"] }
tokio = { version = "1.42.0", features = ["full"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
pretty_env_logger = "0.4"
once_cell = "1.20.2"
toml = "0.5"
serial_test = "3.2.0"
static_assertions = "1.1.0"
paste = "1.0.15"
futures = "0.3"
[build-dependencies]
bindgen = "0.71.0"
cc = "1.0"
