[package]
name = "beehive"
version = "0.1.0"
edition = "2024"

[dependencies]
beehive_helper = { path = "../beehive_helper"}
nix = { version = "0.29", features = ["mman"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
pretty_env_logger = "0.4"
once_cell = "1.20.2"
toml = "0.5"
serial_test = "3.2.0"
static_assertions = "1.1.0"
paste = "1.0.15"
futures = "0.3"
sync-ptr = "0.1.1"
tokio = { version = "1.44.1", features = ["full"] }
rayon = "1.8"
async-std = { version = "1.13.1" }
smol = "2.0.2"
libfibre_port = { path = "../libfibre_port" }
[build-dependencies]
bindgen = "0.71.0"
cc = "1.0"
